add user and video models

--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,6 @@
 PORT=8000
 MONGODB_URI=mongodb+srv://pratyush27112005:your-password@cluster0.1i8ld.mongodb.net
-
+ACCESS_TOKEN_SECRET=pratyush
+ACCESS_TOKEN_EXPIRY=1d
+REFRESH_TOKEN_SECRET=topper
+REFRESH_TOKEN_EXPIRY=10d
