--- a/.env.sample
+++ b/.env.sample
@@ -4,3 +4,7 @@ ACCESS_TOKEN_SECRET=pratyush
 ACCESS_TOKEN_EXPIRY=1d
 REFRESH_TOKEN_SECRET=topper
 REFRESH_TOKEN_EXPIRY=10d
+
+CLOUDINARY_CLOUD_NAME=
+CLOUDINARY_API_KEY=
+CLOUDINARY_API_SECRET=
